[package]
name = "actix_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
argon2 = "0.4.1"
env_logger = "0.9.0"
actix-session = { version = "0.7.2", features = [ "cookie-session" ] }
actix-files = "0.6.2"
minijinja = { version = "0.30", features = ["source"] }
minijinja-autoreload = "0.30"
actix-utils = "3.0.1"
actix-web-lab = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres", "chrono", "runtime-actix-native-tls", "uuid" ] }
chrono = { version = "0.4.23", features = [ "std", "serde" ] }
